fix(EV9261): refactor classification (#5966)
* fix(EV9261): refactor classification

* fix(classification): hide over math

* fix(classification): alignment of response box

* fix(classification): move dragScroll container to package

* fix(EV-9261): fix page crash in std test page

* fix(classification):auto-scroll works vertical and horizontal in classication

* fix(classification): keep same width of all choices

* fix(classification): overlap bug choices and response box

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -28,6 +28,8 @@
     "addANewHint": "Add a new hint",
     "enterHintForTheProblem": "Enter a hint for the problem",
     "options": {
+      "choiceMaxWidth": "Choice Max Width",
+      "choiceMinWidth": "Choice Min Width",
       "autoexpandoninput": "AUTO EXPAND ON INPUT",
       "instant_feedback": "Check answer button",
       "check_answer": "Check answer",
