fix(Charts): return stepSize and snapTo options (#6184)
* fix(Charts): return snap to and step size options

* fix(Chart): fix chart options applying

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -262,7 +262,7 @@
       "layoutMargin": "Margin (px)",
       "yAxisMin": "Min Value",
       "yAxisMax": "Max Value",
-      "stepSize": "Y Axis Step",
+      "stepSize": "Step Size",
       "snapTo": "Snap To",
       "xAxisLabel": "X Axis Label",
       "yAxisLabel": "Y Axis Label",
@@ -278,7 +278,7 @@
       "minorTicks": "Minor Ticks",
       "showTicks": "Show Ticks",
       "xAxis": "X Axis",
-      "yAxis": "Y Axix",
+      "yAxis": "Y Axis",
       "categories": "Categories",
       "initialValue": "Initial Value",
       "showAlways": "Show always",
