fix(MatrixChoice): fix preview page rendering (#5946)
* fix(MatrixChoice): fix preview page rendering

* fix(ChoiceMatrix): fix table header styles

* fix(MatrixChoice): fix evaluation highlighting

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -827,7 +827,9 @@
       "multipleResponses": "Multiple responses",
       "enterQuestion": "Enter your question",
       "multipleChoiceOptions": "Multiple Choice Options",
-      "stems": "Stems"
+      "stems": "Stems",
+      "correctAnswer": "Correct Answer",
+      "alternateAnswer": "Alternate Answer"
     },
     "passage": {
       "mathJax": "MathJax (response inputs renderer with MathQuill)",
