--- a/packages/localization/src/locales/header/en.json
+++ b/packages/localization/src/locales/header/en.json
@@ -1,11 +1,11 @@
 {
   "common": {
-    "dashboardTitle": "Dashboard",
+    "dashboardTitle": "Assignments",
     "classLabel": "Class",
     "manageClassTitle": "Manage Class",
     "showLabel": "Show",
-    "reportsTitle": "Reports",
-    "skillReportTitle": "Skill Report",
+    "reportsTitle": "Grades",
+    "skillReportTitle": "Skill Mastery",
     "assignmentsTitle": "Assignments",
     "profileTitle": "My Profile"
   }
