fix(student grades): completed on date fix (#6346)
* fix(student grades): completed on date fix

* fix(student grades): removed mutation

--- a/packages/localization/src/locales/assignmentCard/en.json
+++ b/packages/localization/src/locales/assignmentCard/en.json
@@ -25,6 +25,7 @@
     "NOT_GRADED": "NOT GRADED",
     "IN GRADING": "IN GRADING",
     "absent": "ABSENT",
-    "submitted": "SUBMITTED"
+    "submitted": "SUBMITTED",
+    "completedOn": "Completed On"
   }
 }
