style(itembank-header): button style and text changes as per the mockup (#6363)

--- a/packages/localization/src/locales/author/en.json
+++ b/packages/localization/src/locales/author/en.json
@@ -80,7 +80,7 @@
     },
     "itemlist": {
       "header": {
-        "create": "Create Item",
+        "create": "New Item",
         "itemlist": "Item Bank"
       },
       "filter": {
