Add(EV-9776): Adding feature Grading Rubric. (#6180)
* Add(EV-9776): Adding feature Grading Rubric.

* Update: Added Rating and Criteria Containers.

-
-
-

* Update:Added duplicate and delete functionality for criteria.

-
-
-

* Update: Added Create new search bar and table.

-
-
-

* Update: Added Preview Rubric functionality.

* Update: Added Preview rubric modal

-
-
-

* Update: changes in UI accoriding to new layout.

-
-
-

* Update: Continued UI changes.

-
-
-

* Update: UI enhancememnts

-
-
-

* Update: UI enhacements in rubric design.

-
-
-

* Update: UI enhancements and corrected cloning criteria logic.

-
-
-

* Update, Refactor: Integrated BE Api

* Update: Added preview modal and delete rubric.

-
-
-

--- a/packages/localization/src/locales/assessment/en.json
+++ b/packages/localization/src/locales/assessment/en.json
@@ -136,6 +136,7 @@
       "scoring": "Scoring",
       "automarkable": "Enable auto scoring",
       "unscored": "Unscored / Practice usage",
+      "gradingRubric": "Grading Rubric",
       "penalty": "Penalty Point(s)",
       "stimulusreviewonly": "Stimulus (review only)",
       "instructorstimulus": "Instructor stimulus",
