fix(clever signup): text correction (#6563)

--- a/packages/localization/src/locales/login/en.json
+++ b/packages/localization/src/locales/login/en.json
@@ -37,6 +37,7 @@
       "signupboxheading": "Sign up",
       "googlesignupbtn": "SIGN UP WITH GOOGLE",
       "office365signupbtn": "SIGN UP WITH OFFICE 365",
+      "cleversignupbtn": "SIGN UP WITH CLEVER",
       "formboxheading": "Or create your account",
       "formboxheadinggoole": "Please, enter your ClassCode",
       "signupnamelabel": "Name",
